# ERASOR2

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  README_mos.md  USAGE.md  package.xml
.claude/memory/: MEMORY.md  build_env_gotchas.md  fixture_locations.md  migration_history.md  parity_workflow.md  project_profile.md  user_preferences.md
.github/workflows/: parity.yml
config/: HeLiPR.yaml  HeLiPR_kitti.yaml  compare_map.yaml  erasor2.yaml  helimos_smoke.yaml  helipr_mapgen.yaml  kitti_mapgen.yaml  large_scale.yaml  large_scale_05.yaml  seq_00.yaml  seq_01.yaml  seq_02.yaml  seq_05.yaml  seq_05_for_keti.yaml  seq_07.yaml  seq_08.yaml  seq_19.yaml  your_own_env.yaml  your_own_env_ouster.yaml  your_own_env_vel16.yaml
config/deprecated/: ekf_param.yaml  kitti_scdr.yaml
config/erasor/: seq_00.yaml  seq_01.yaml  seq_02.yaml  seq_05.yaml  seq_07.yaml
config/erasor2/: HeLiPR.yaml  seq_00.yaml  seq_01.yaml  seq_02.yaml  seq_07.yaml
docker/: README.md  erasor1.Dockerfile  run_erasor.sh  run_mapgen.sh
img/: Description.md
include/: rosparam_server.hpp
include/dataloader/: dataloader.h
include/dataprocessor/: BsplineSE3.h  PointCloudProcessor.h  TrajectoryClustering.hpp  quat_ops.h  utility.h  visualizer.h
include/erasor/: erasor.h
include/erasor1/: erasor.hpp
include/erasor2/: Config.hpp  OfflineMapUpdater.h  RerunLogger.hpp  erasor2.h  grid_map.hpp  progress_bar.hpp
include/mapgen/: mapgen.hpp
include/nanoflann/: nanoflann_utils.hpp
include/tools/: erasor_utils.hpp  hash_voxel_grid.hpp
launch/: accum_4dmos.launch  compare_map.launch  helipr_to_kitti.launch  mapgen.launch  mapgen_in_large_scale.launch  merge_helipr_to_kitti.launch  run_erasor.launch  run_erasor2.launch  run_erasor_in_your_env_vel16.launch  total_map_viz_seq_05.yaml  transformINStoLiDAR.launch  viz_kitti_map.launch
rviz/: clustering_viz.rviz  erasor_map.rviz  erasor_map_in_your_env_v2.rviz  gridmap_egocentric.rviz  gridmap_mapcentric.rviz  kitti_mapgen.rviz  map_comparison.rviz  semantickitti_debug.rviz  srt.rviz
rviz/to_be_updated/: drbfactory_demonstration.rviz  entrance_demonstration.rviz  korea_univ_demonstration.rviz  mapupdater_body.rviz  parkinglot_demonstration.rviz  scdr_bodyframe_seq1.rviz  scdr_bodyframe_tmp.rviz  w16_demonstration.rviz
scripts/: README.md  RenderOption_2022-12-13-22-54-03.json  analysis.py  autorun.sh  environment.yml  evaluate.py  generate_labels.sh  kitti_clustering.py  npy2label.py  pcd_preprocess.py  py2.7_environment.yml  requirements.txt  run_benchmark.py  run_pipeline.py  vel16_clustering.py  visualize_clustering.py
shellscripts/: autorun_01.zsh  autorun_erasor2.zsh
src/: accum_4dmos.cpp  compare_map.cpp  fill_removert_labels.cpp
src/dataloader/: dataloader.cpp
src/dataprocessor/: BsplineSE3.cpp  PointCloudProcessor.cpp  pointMerger.cpp  pointSaver.cpp  utility.cpp  visualizer.cpp
src/dataprocessor/python/: labelMerger.py  transformINStoLiDAR.py
src/erasor1/: erasor.cpp  main.cpp
src/erasor2/: Config.cpp  OfflineMapUpdater.cpp  RerunLogger.cpp  erasor.cpp  erasor2.cpp  erasor_utils.cpp  grid_map.cpp  main.cpp  main_in_your_env.cpp  main_kitti.cpp
src/example/: compare_complement.cpp  inheritance_test.cpp  main.cpp  merge_map.cpp  parse_data.cpp  pub_marker.cpp  pub_polygon.cpp  speed_check.cpp  viz_kitti_map.cpp
src/mapgen/: main.cpp  mapgen.hpp
src/offline_map_updater/: main_in_your_env.cpp
src/offline_map_updater/src/: OfflineMapUpdater.cpp  erasor.cpp  erasor_utils.cpp
tests/: README.md
tests/scripts/: assert_metrics.py  prepare_fixtures.sh  run_parity.sh
