<?xml version="1.0"?>
<package format="2">
  <name>erasor2</name>
  <version>1.0.0</version>
  <description>The ERASOR2 package (ROS-free runtime; rerun-based viz).</description>
  <maintainer email="shapelim@kaist.ac.kr">Hyungtae_Lim</maintainer>

  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!--
       The runtime no longer needs any ROS networking stack.  We still depend
       on grid_map_core (in-memory 2D grid data structure used by the
       algorithm) and grid_map_cv (Cv image converters used by dilateAndErode).
       Both are pure C++/Eigen/OpenCV libs that ship inside catkin packages —
       no roscore needed.

       yaml-cpp and rerun_sdk are pulled in by CMakeLists.txt and used for
       config loading and visualization respectively.
  -->
  <depend>grid_map_core</depend>
  <depend>grid_map_cv</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libyaml-cpp-dev</depend>
</package>
